--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -151,7 +151,7 @@
         </form>
       </div>
       <hr></hr>
-      <ul class="nav nav-tabs" role="tablist">
+      <ul class="nav nav-pills" role="tablist">
         <li class="active"><a href="#list-style" role="tab" data-toggle="tab">List</a></li>
         <li><a href="#square-style" role="tab" data-toggle="tab">Sqaures</a></li>
       </ul>
