--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -225,8 +225,42 @@
       </div>
     </div>
 
+    <!-- Stuff for the creator only -->
+    <div id="creator_edit_content" class="hide">
+      <h3> Youtube link &nbsp;&nbsp;&nbsp; </h3>
+      <small> The thumbnail of the video will be your main image. </small>
 
-    <h1 id="main_body_title" class="hide">Page body</h1>
+      <form id="youtubeLinkForm" class="form-horizontal" role="form">
+        <div id="youtubeLinkDiv" class="form-group">
+          <label for="youtubeLink3" class="col-sm-2 control-label">Youtube link</label>
+          <div class="col-sm-10">
+          <input name="youtubelink" type="url" class="form-control" id="youtubeLink3" 
+            placeholder="Your video link"
+            data-bv-message="The link is not valid"
+
+            data-bv-notempty="true"
+            data-bv-notempty-message="The link is required and cannot be empty"
+
+            data-bv-uri-message="The link address is not valid"
+            >
+          </div>
+        </div>
+
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button id="youtubeLinkBtn" type="submit" class="btn btn-primary" 
+            data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>">Save</button>
+          </div>
+        </div>
+      </form>
+
+    </div>
+
+
+    <!-- Stuff for everyone -->
+
+    <h2 id="main_body_title" class="hide">Page body</h2>
     <div id="main_body" class="row">
 
       <script id="main_body_template" type="x-tmpl-mustache">
