--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -255,12 +255,42 @@
         </div>
       </form>
 
+      <h3> Description &nbsp;&nbsp;&nbsp; </h3>
+      <small> A short description(140 characters or less) of your brand. </small>
+
+      <form id="shortDescriptionForm" class="form-horizontal" role="form">
+        <div id="shortDescriptionDiv" class="form-group">
+          <label for="shortDescription3" class="col-sm-2 control-label">Description</label>
+          <div class="col-sm-10">
+          <input name="shortDescription" type="url" class="form-control" id="shortDescription3" 
+            placeholder="140 characters max"
+            data-bv-message="Not valid"
+
+            data-bv-notempty="true"
+            data-bv-notempty-message="Can't be empty"
+
+            data-bv-stringlength-max="140"
+            data-bv-stringlength-message="Too many characters"
+            
+            >
+          </div>
+        </div>
+
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button id="shortDescriptionBtn" type="submit" class="btn btn-primary" 
+            data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>">Save</button>
+          </div>
+        </div>
+      </form>
+
     </div>
 
 
     <!-- Stuff for everyone -->
 
-    <h2 id="main_body_title" class="hide">Page body</h2>
+    <h3 id="main_body_title" class="hide">Page body</h3>
     <div id="main_body" class="row">
 
       <script id="main_body_template" type="x-tmpl-mustache">
