--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -264,12 +264,14 @@
           <div class="col-sm-10">
           <input name="shortDescription" type="url" class="form-control" id="shortDescription3" 
             placeholder="140 characters max"
+
             data-bv-message="Not valid"
 
             data-bv-notempty="true"
             data-bv-notempty-message="Can't be empty"
 
-            data-bv-stringlength-max="140"
+
+            data-bv-stringlength-max=140
             data-bv-stringlength-message="Too many characters"
             
             >
