--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -262,7 +262,7 @@
         <div id="shortDescriptionDiv" class="form-group">
           <label for="shortDescription3" class="col-sm-2 control-label">Description</label>
           <div class="col-sm-10">
-          <input name="shortDescription" rows="3" type="name" class="form-control" id="shortDescription3" 
+          <textarea name="shortDescription" rows="3" type="name" class="form-control" id="shortDescription3" 
             placeholder="140 characters max"
 
             data-bv-message="Not valid"
@@ -276,7 +276,7 @@
             data-bv-stringlength-message="The description must be more than 1 and less than 140 characters long"
             
             >
-          </div>
+          </textarea>
         </div>
 
 
