--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -234,7 +234,7 @@
         <div id="youtubeLinkDiv" class="form-group">
           <label for="youtubeLink3" class="col-sm-2 control-label">Youtube link</label>
           <div class="col-sm-10">
-          <input name="youtubelink" type="url" class="form-control" id="youtubeLink3" 
+          <input id="youtubeLinkInput" name="youtubelink" type="url" class="form-control" id="youtubeLink3" 
             placeholder="Your video link"
             data-bv-message="The link is not valid"
 
@@ -262,7 +262,7 @@
         <div id="shortDescriptionDiv" class="form-group">
           <label for="shortDescription3" class="col-sm-2 control-label">Description</label>
           <div class="col-sm-10">
-          <textarea name="shortDescription" rows="3" type="name" class="form-control" id="shortDescription3" 
+          <textarea id="shortDescriptionInput" name="shortDescription" rows="3" type="name" class="form-control" id="shortDescription3" 
             placeholder="140 characters max"
 
             data-bv-message="Not valid"
