--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -250,16 +250,16 @@
                     <br><br>
                     <div class="row">
                       <div class="col-md-4">
-                        <p class="announcement-heading">400</p>
-                        <p class="announcement-text">Worth</p>
+                        <h4>400</h4>
+                        <h6>Worth</h6>
                       </div>
                       <div class="col-md-4">
-                        <p class="announcement-heading">4</p>
-                        <p class="announcement-text">Backers</p>
+                        <h4>4</h4>
+                        <h6>Backers</h6>
                       </div>
                       <div class="col-md-4">
-                        <p class="announcement-heading">0.5%</p>
-                        <p class="announcement-text">Reward yield</p>
+                        <h4>0.5%</h4>
+                        <h6>Reward yield</h6>
                       </div>
                     </div>
 
