--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -235,6 +235,9 @@
               <div class="col-md-3">
                 <div class="panel panel-primary">
                   <div class="panel-body">
+                  <img class="featurette-image img-responsive" 
+                  src="https://img.youtube.com/vi/%3Cinsert-youtube-video-id-here%3E/maxresdefault.jpg" 
+                  alt="Generic placeholder image">
 
                     
 
