--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -239,9 +239,11 @@
 
                   <div class="panel-body">
                   <div style="
+                  display: block;
+                  margin: -15px;
                   height: 207px;
                   width:auto !important; 
-                   
+                  
                   background: url('https://img.youtube.com/vi/%3Cinsert-youtube-video-id-here%3E/maxresdefault.jpg')  
                   no-repeat center top transparent;">&nbsp;</div>
 
