--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -238,7 +238,7 @@
 
 
                   <div class="panel-body">
-                  <img class="discover-image img-responsive center" 
+                  <img class="discover-image img-responsive img-center" 
                   src="https://img.youtube.com/vi/05BipfPpUsA/maxresdefault.jpg" 
                   alt="Generic placeholder image">
 
