--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -238,9 +238,11 @@
 
 
                   <div class="panel-body">
-                  <img class="img-center discover-image img-responsive " 
-                  src="https://img.youtube.com/vi/05BipfPpUsA/maxresdefault.jpg" 
-                  alt="Generic placeholder image">
+                    <div class="discover-image">
+                      <img class="img-responsive img-center" 
+                      src="https://img.youtube.com/vi/05BipfPpUsA/maxresdefault.jpg" 
+                      alt="Generic placeholder image">
+                    </div>
 
                     
 
