--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -239,7 +239,7 @@
 
                   <div class="panel-body">
                     <div class="discover-image">
-                      <img class="img-responsive img-center" 
+                    <img class="img-responsive img-center remove-border" 
                       src="https://img.youtube.com/vi/05BipfPpUsA/maxresdefault.jpg" 
                       alt="Generic placeholder image">
                     </div>
