--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -232,7 +232,7 @@
           <div id="discover_creators_square" class="panel-body">
             <script id="discover_creators_square_template" type="x-tmpl-mustache"> 
             {{#.}}
-              <div class="col-md-2">
+              <div class="col-md-3">
                 <div class="panel panel-primary">
 
 
@@ -250,8 +250,8 @@
                     <h2><b><a href="/creators/main/{{creators_name}}"> {{creators_name}} </a></b></h2>
                     
                     <h3> h3</h3>
-                    <h4> Description favorite </h4>
-                    <h5> h5 </h5>
+                    <h4> Heres the 140 word description that goes in here </h4>
+                  
 
 
                     <h6> h6 </h6>
