--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -234,7 +234,7 @@
         <div id="youtubeLinkDiv" class="form-group">
           <label for="youtubeLink3" class="col-sm-2 control-label">Youtube link</label>
           <div class="col-sm-10">
-          <input id="youtubeLinkInput" name="youtube_link" type="url" class="form-control" id="youtubeLink3" 
+          <input id="youtubeLinkInput" name="youtube_link" type="url" class="form-control"
             placeholder="Your video link"
             data-bv-message="The link is not valid"
 
