--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -262,7 +262,7 @@
         <div id="shortDescriptionDiv" class="form-group">
           <label for="shortDescription3" class="col-sm-2 control-label">Description</label>
           <div class="col-sm-10">
-          <textarea id="shortDescriptionInput" name="shortDescription" rows="3" type="name" class="form-control" id="shortDescription3" 
+          <textarea id="shortDescriptionInput" name="shortDescription" rows="3" type="name" class="form-control"
             placeholder="140 characters max"
 
             data-bv-message="Not valid"
