--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -293,6 +293,25 @@
 
     <!-- Stuff for everyone -->
 
+    <!-- A centered panel -->
+    <div class="row">
+      <div class="col-md-12">
+     
+              <iframe class="img-center img-responsive" 
+              src="//www.youtube.com/embed/pWoo4xv-qoA?rel=0&amp;theme=light&amp;modestbranding=1&amp;wmode=transparent&amp;showinfo=0" 
+              frameborder="0" allowfullscreen="">
+              </iframe>
+
+      </div>
+    </div>
+
+ <div class="row">
+      <div class="col-md-12">
+        <h4>The descriptionl lkdsjfklasdjfl s</h4>
+        </div>
+    </div>
+
+
     <h3 id="main_body_title" class="hide">Page body</h3>
     <div id="main_body" class="row">
 
