--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -305,10 +305,13 @@
       </div>
     </div>
 
- <div class="row">
+    <div class="row">
       <div class="col-md-12">
-        <h4>The descriptionl lkdsjfklasdjfl s</h4>
-        </div>
+        <span class='st_fblike_hcount' displayText='Facebook Like'></span>
+        <span class='st_plusone_hcount' displayText='Google +1'></span>
+        <span class='st_twitter_hcount' displayText='Tweet'></span>
+        <span class='st_reddit_hcount' displayText='Reddit'></span>
+      </div>
     </div>
 
 
@@ -1408,6 +1411,8 @@
       <script src="pickadate/lib/picker.date.js"></script>
       <script src="summernote/dist/summernote.min.js"></script>
       <script type="text/javascript" src="https://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
+      <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+      <script type="text/javascript">stLight.options({publisher: "014413bd-e340-4e88-8139-7ee54e4ee45c", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 
       <!-- my scripts -->
       <script src="tools.js"></script>
