--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -234,7 +234,7 @@
             {{#.}}
             <div class="clearfix visible-xs-block"></div>
               <div class="col-md-3">
-                <div class="panel panel-primary">
+                <div class="discover-tile panel panel-primary">
 
 
 
