--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -180,17 +180,19 @@
         <hr>
         <div id="what_is_bitpieces" class="row featurette">
          <div class="col-md-6">
-           <iframe width="528" height="396" src="//www.youtube.com/embed/pWoo4xv-qoA?rel=0&amp;theme=light&amp;modestbranding=1&amp;wmode=transparent&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe>
+          <div class="embed-responsive embed-responsive-16by9">
+           <iframe src="//www.youtube.com/embed/pWoo4xv-qoA?rel=0&amp;theme=light&amp;modestbranding=1&amp;wmode=transparent&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe>
          </div>
-         <div class="col-md-6">
+       </div>
+       <div class="col-md-6">
          <br><br><br>
-          <h2 class="featurette-heading">What is Bitpieces? </h2>
-          <br>
-          <p class="lead"> <a href="/FAQ">Bitpieces</a> is an <b>open source</b> crowd-funding platform that gives content <a href="/FAQ#what_is_a_creator">creators</a>, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">selling pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
-          </p>
-        </div>
+         <h2 class="featurette-heading">What is Bitpieces? </h2>
+         <br>
+         <p class="lead"> <a href="/FAQ">Bitpieces</a> is an <b>open source</b> crowd-funding platform that gives content <a href="/FAQ#what_is_a_creator">creators</a>, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">selling pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
+         </p>
+       </div>
 
-      </div>
+     </div>
 
 
       <hr>
