--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -129,11 +129,14 @@
 
         <form id="discover_search" class="form-inline" role="form">
 
-          <h3 for="category" class="form-group col-xs-2 text"> Show me </h3>
+        <div class="col-xs-2">
+            <h3 for="category" class="form-group text"> Show me </h3>
+        </div>
+        
 
 
-
-          <div class="col-xs-6 form-group" id="categories">
+          <div class="col-xs-4">
+          <div class="form-group" id="categories">
 
             <script id="categories_template" type="x-tmpl-mustache"> 
 
@@ -146,7 +149,7 @@
 
             </script>
           </div>
-
+          </div>
 
           
         </form>
