--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -128,16 +128,10 @@
       <div class="col-md-10">
 
         <form id="discover_search" class="form-inline" role="form">
-
-        <div class="col-xs-2">
-            <h3 for="category" class="form-group text"> Show me </h3>
-        </div>
-        
-
-
-          <div class="col-xs-4">
+    
+          <div class="col-xs-6">
           <div class="form-group" id="categories">
-
+          <label for="inputUsername3" class="col-xs-2 control-label">Show me</label>
             <script id="categories_template" type="x-tmpl-mustache"> 
 
               <select name="category" class="form-control" role="menu" aria-labelledby="dropdownMenu1">
