--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -126,14 +126,14 @@
 
       <div class="row">
       <div class="col-md-10">
-
+        <script id="categories_template" type="x-tmpl-mustache"> 
         <form id="discover_search" class="form-horizontal" role="form">
         <fieldset>
 
           <div class="form-group" id="categories">
             <label class="col-sm-2 control-label">Show me</label>
             <div class="col-xs-4">
-              <!-- <script id="categories_template" type="x-tmpl-mustache"> 
+              
 
               <select name="category" class="form-control" role="menu" aria-labelledby="dropdownMenu1">
                 <option value="All">All</option>
@@ -142,12 +142,14 @@
                 {{/.}}
               </select>
 
-            </script> -->
+           
           </div>
         </div>
 
           </fieldset>
         </form>
+
+         </script>
       </div>
       <div class="col-md-2">
         <ul class="nav nav-pills pull-right" role="tablist">
