--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -288,16 +288,16 @@
                     </div>
                     <div class="row">
                       <div class="col-xs-3">
-                        <h8>Worth</h8>
+                        <h6><small>Worth</small></h6>
                       </div>
                       <div class="col-xs-3">
-                       <h8>Price/piece</h8>
+                       <h6><small>Price/piece</small></h6>
                      </div>
                      <div class="col-xs-3">
-                       <h8>Backers</h8>
+                       <h6><small>Backers</small></h6>
                      </div>
                      <div class="col-xs-3">
-                      <h8>Reward yield</h8>
+                      <h6><small>Reward yield</small></h6>
                     </div>
                   </div>
 
